corrected nav-item spacing

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ body,
     font-size: 1.6rem;
 }
 
-.nav-item {
+.navbar .nav-item {
     padding-left: 5rem;
 }
 
